fix scrollbar 🧂

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,7 +21,7 @@
 }
 
 *::-webkit-scrollbar-track {
-    @apply rounded-full bg-black;
+    @apply bg-black;
 }
 
 *::-webkit-scrollbar {
